--- a/examples/index.html
+++ b/examples/index.html
@@ -57,6 +57,7 @@
           <p><a href="#" x-data="api-videos.html">Api Videos</a></p>
           <p><a href="#" x-data="ads-youtube.html">Ads & Youtube</a></p>
           <p><a href="#" x-data="stat-tracking.html">Stat Tracking</a></p> 
+          <p><a href="#" x-data="custom-stat-tracking.html">Custom Stat Tracking</a></p> 
           <p><a href="#" x-data="custom-events.html">Custom Events</a></p>              
         </div>
       </div>
