--- a/examples/index.html
+++ b/examples/index.html
@@ -58,7 +58,8 @@
           <p><a href="#" x-data="ads-youtube.html">Ads & Youtube</a></p>
           <p><a href="#" x-data="stat-tracking.html">Stat Tracking</a></p> 
           <p><a href="#" x-data="custom-stat-tracking.html">Custom Stat Tracking</a></p> 
-          <p><a href="#" x-data="custom-events.html">Custom Events</a></p>              
+          <p><a href="#" x-data="custom-events.html">Custom Events</a></p>  
+          <p><a href="#" x-data="advanced.html">Advanced</a></p>                
         </div>
       </div>
       <div class="col-md-9">
