--- a/examples/basic-template.html
+++ b/examples/basic-template.html
@@ -24,7 +24,7 @@
       ,statsApi: 'http://example.com/api/stats'
       ,enableStats: false        
       ,replayText: 'Replay ?'
-      ,autoplay: true         
+      ,autoplay: false         
       ,loop: false
       ,debug: false
       ,AppSettings: {
