--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         ,replayText: 'Replay ?'
         ,autoplay: true         
         ,loop: true
-        ,debug: true
+        ,debug: false
         ,AppSettings: {
           UserID: "brian"
             ,AccountID: 1
