--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
             ,"intensity":"1"
             ,"enabled":"1"
             ,src: [
-              '../assets/videos/TBBBTYB_hopsports.mp4'
-              //,'../assets/videos/TBBBTYB_hopsports.webm'
+              'assets/videos/TBBBTYB_hopsports.mp4'
+              //,'assets/videos/TBBBTYB_hopsports.webm'
             ]
             ,srcHD: [
-              '../assets/videos/TBBBTYB_hopsports.mp4'
+              'assets/videos/TBBBTYB_hopsports.mp4'
               //'assets/videos/ADA_BEST1.mp4'
-              //,'../assets/videos/ADA_BEST1.webm'
+              //,'assets/videos/ADA_BEST1.webm'
             ]
             ,type: "video/mp4"
             ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
