--- a/examples/ads-youtube.html
+++ b/examples/ads-youtube.html
@@ -61,7 +61,7 @@
           ]
           ,type: "video/mp4"
           ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : '<a href="http://www.hopsports.com" >HOPSports</a>' 
           ,isAd: true
           ,controls: false 
         }
@@ -88,7 +88,7 @@
             'http://www.youtube.com/watch?v=f9aMmSzIHnI'
           ]
           ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : 'Youtube Video' 
           ,isAd: false
           ,controls: true 
         }
