--- a/examples/advanced.html
+++ b/examples/advanced.html
@@ -128,7 +128,7 @@
             ]
             ,type: "video/mp4"
             ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-            ,title : 'Ad 1'  
+            ,title : '<a href="http://www.hopsports.com" >HOPSports</a>'   
             ,isAd: true
             ,controls: false 
           }
