--- a/examples/custom-events.html
+++ b/examples/custom-events.html
@@ -62,7 +62,7 @@
           ] 
           ,type: "video/mp4"
           ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : '<a href="http://www.hopsports.com" >HOPSports</a>'    
           ,isAd: true
           ,controls: true 
         }
@@ -112,7 +112,7 @@
             '../assets/videos/TBBBTYB_hopsports.mp4'
           ]
           ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 2'  
+          ,title : '<a href="http://www.hopsports.com" >HOPSports</a>'   
           ,isAd: true
           ,controls: false 
         } 
