--- a/examples/custom-stat-tracking.html
+++ b/examples/custom-stat-tracking.html
@@ -143,7 +143,7 @@
           ]
           ,type: "video/mp4"
           ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : '<a href="http://www.hopsports.com" >HOPSports</a>'   
           ,isAd: true
           ,controls: false 
         }
@@ -168,7 +168,7 @@
             'http://www.youtube.com/watch?v=f9aMmSzIHnI'
           ]
           ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : 'Youtube Video'   
           ,isAd: false
           ,controls: true 
         }
@@ -193,7 +193,7 @@
             '../assets/videos/TBBBTYB_hopsports.mp4'
           ]
           ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : '<a href="http://www.hopsports.com" >HOPSports</a>'   
           ,isAd: true
           ,controls: false 
         } 
