--- a/examples/stat-tracking.html
+++ b/examples/stat-tracking.html
@@ -60,7 +60,7 @@
           ]
           ,type: "video/mp4"
           ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : '<a href="http://www.hopsports.com" >HOPSports</a>'  
           ,isAd: true
           ,controls: false 
         }
@@ -85,7 +85,7 @@
             'http://www.youtube.com/watch?v=f9aMmSzIHnI'
           ]
           ,poster : 'assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : 'Youtube Video'  
           ,isAd: false
           ,controls: true 
         }
@@ -110,7 +110,7 @@
             '../assets/videos/TBBBTYB_hopsports.mp4'
           ]
           ,poster : '../assets/videos/TBBBTYB_hopsports.jpg'
-          ,title : 'Ad 1'  
+          ,title : '<a href="http://www.hopsports.com" >HOPSports</a>'  
           ,isAd: true
           ,controls: false 
         } 
