added more feeds

--- a/index.html
+++ b/index.html
@@ -234,18 +234,43 @@
       });
 
       var feeds = [
+        
         { 
-          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e678becc06a033cd31f958bf6f7a55ea&_render=json'
-          ,title: 'Electronic'
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=af1731677d0479671fe57893dfdf001c&_render=json'
+          ,title: 'Top Music Videos'
         }
         ,{ 
-          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=af1731677d0479671fe57893dfdf001c&_render=json'
-          ,title: 'Pop'
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e678becc06a033cd31f958bf6f7a55ea&_render=json'
+          ,title: 'Top Electronic'
+        }
+        ,{ 
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e75b87970a4590ab3f61c53854661fde&_render=json'
+          ,title: 'Top Pop'
         }
         ,{ 
           url: 'https://pipes.yahoo.com/pipes/pipe.run?_id=b3a4c1011716a9b1207714d139663d3a&_render=json' 
-          ,title: 'Alternative'
+          ,title: 'Top Alternative'
         }
+        ,{ 
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=33ef1217c91c173678465b08f474c1df&_render=json' 
+          ,title: 'Top Country'
+        }
+        ,{ 
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=c313ac2597c42ccce5130552479e2f54&_render=json' 
+          ,title: 'Top Rap'
+        }
+        ,{ 
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=1535ad0444516d3c30d98233c8c6052e&_render=json' 
+          ,title: 'Top Latino'
+        }
+        ,{ 
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=9128fcc66350e03831787723691e1954&_render=json' 
+          ,title: 'Top Soul'
+        }
+        ,{ 
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=f1c6d1bf65633c1557f1a9fe83516d34&_render=json' 
+          ,title: 'Top Rock'
+        }       
       ];
 
       var n = 0;
