--- a/index.html
+++ b/index.html
@@ -234,19 +234,22 @@
       });
 
       var feeds = [
-        
         { 
-          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=af1731677d0479671fe57893dfdf001c&_render=json'
-          ,title: 'Top Music Videos'
-        }
-        ,{ 
-          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e678becc06a033cd31f958bf6f7a55ea&_render=json'
-          ,title: 'Top Electronic'
-        }
+          url: 'https://pipes.yahoo.com/pipes/pipe.run?_id=a62a707130429b1080f5b7631bba6337&_render=json' 
+          ,title: 'Movie Trailers'
+        } 
         ,{ 
           url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e75b87970a4590ab3f61c53854661fde&_render=json'
           ,title: 'Top Pop'
         }
+        /*,{ 
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=af1731677d0479671fe57893dfdf001c&_render=json'
+          ,title: 'Top Music Videos'
+        }*/
+        ,{ 
+          url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=e678becc06a033cd31f958bf6f7a55ea&_render=json'
+          ,title: 'Top Electronic'
+        }        
         ,{ 
           url: 'https://pipes.yahoo.com/pipes/pipe.run?_id=b3a4c1011716a9b1207714d139663d3a&_render=json' 
           ,title: 'Top Alternative'
@@ -263,14 +266,14 @@
           url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=1535ad0444516d3c30d98233c8c6052e&_render=json' 
           ,title: 'Top Latino'
         }
-        ,{ 
+        /*,{ 
           url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=9128fcc66350e03831787723691e1954&_render=json' 
           ,title: 'Top Soul'
-        }
+        }*/
         ,{ 
           url: 'http://pipes.yahoo.com/pipes/pipe.run?_id=f1c6d1bf65633c1557f1a9fe83516d34&_render=json' 
           ,title: 'Top Rock'
-        }       
+        }                     
       ];
 
       var n = 0;
