--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div id="video-cont" >
         <div id="video1"></div> 
         <div id="video-title"></div> 
-        <div id ="playlists" ></div>       
+        <div id ="playlists" class="jumbotron jumbotron-grey"></div>       
         <div id="next"><a href="#" ><i class="fa fa-chevron-right"></i></a></div>
         <div id="previous"><a href="#" ><i class="fa fa-chevron-left"></i></a></div>
       </div>
