--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
       <p>Cross-browser HTML5 Video Player made with <a href="http://www.videojs.com" >Video JS</a>. Supports all major browsers plus iOS and Android.</p>
       <div id="video-cont" >
         <div id="video1"></div> 
-        <div id="video-title"></div> 
-        <div id ="playlists" class="jumbotron jumbotron-grey"></div>       
+        <div id="video-title"></div>
         <div id="next"><a href="#" ><i class="fa fa-chevron-right"></i></a></div>
         <div id="previous"><a href="#" ><i class="fa fa-chevron-left"></i></a></div>
       </div>
@@ -62,6 +61,10 @@
       </p>
     </div>
   </div> 
+
+  <div class="container dark">
+    <div id ="playlists" ></div>  
+  </div>
 
   <div class="container white">
     <div class="row">
