hid arrow buttons

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div id="video-cont" >
         <div id="video1"></div> 
         <div id="video-title"></div>
-        <div id="next"><a href="#" ><i class="fa fa-chevron-right"></i></a></div>
-        <div id="previous"><a href="#" ><i class="fa fa-chevron-left"></i></a></div>
+       <!-- <div id="next"><a href="#" ><i class="fa fa-chevron-right"></i></a></div>
+        <div id="previous"><a href="#" ><i class="fa fa-chevron-left"></i></a></div> -->
       </div>
       <p>
         <a class="btn btn-lg btn-primary" href="docs/get-started.html" role="button">Get Started</a>
