--- a/examples/basic-template.html
+++ b/examples/basic-template.html
@@ -37,8 +37,10 @@
       ,videos: [  
         {
           src: [
-            'http://video-js.zencoder.com/oceans-clip.mp4'
-            ,'http://video-js.zencoder.com/oceans-clip.webm'
+            '../assets/videos/TBBBTYB_hopsports.mp4'
+            ,'../assets/videos/TBBBTYB_hopsports.webm'
+            //'http://video-js.zencoder.com/oceans-clip.mp4'
+            //,'http://video-js.zencoder.com/oceans-clip.webm'
             //,'http://video-js.zencoder.com/oceans-clip.ogv'
           ]
           ,srcHD: [
