turned off auto play

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         ,statsApi: 'http://laravel.brainbreaks.net/api/stats/?Version=v2'
         ,enableStats: false        
         ,replayText: 'Replay ?'
-        ,autoplay: true         
+        ,autoplay: false         
         ,loop: true
         ,debug: false
         ,AppSettings: {
