fixed broken yt videos from youtube api deprecation

--- a/examples/api-videos.html
+++ b/examples/api-videos.html
@@ -36,7 +36,7 @@
       } 
       ,videos: function(cb) {
           $.ajax({
-            url: '/assets/data/top-videos.json'
+            url: '../assets/data/top-videos.json'
             ,dataType: 'json'
             ,success: function(data) {
               console.log(data)
