--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
       var feeds = [
         { 
-          url: '/assets/data/top-videos.json' 
+          url: 'assets/data/top-videos.json' 
           ,title: 'Top Videos'
         } 
         /*,{ 
